# eink-clock

./: .gitignore  Cargo.toml  README.md  clock.service  clock.timer  eink-clock.service  eink-clock.timer  forever.sh  oneshot.sh  screen.sh
.cargo/: config
.github/workflows/: rust.yml
audio/: noise.prof
src/: art.rs  audio.rs  clock.rs  main.rs  network.rs  render.rs  ssh.rs  svg.rs  usb.rs  weather.rs
