[package]
name = "eink-clock"
version = "0.1.0"
authors = ["Sameer Puri <sameer@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
resvg = { version = "0", features = [ "text", "raqote-backend" ] }
chrono = "0"
png = "0"
weathergov = { version = "0", git = "https://github.com/sameer/weathergov.git" }
