[package]
name = "eink-clock"
version = "0.1.0"
authors = ["Sameer Puri <purisame@spuri.io>"]
edition = "2018"
description = "A clock for e-ink displays like that in the Kindle DX Graphite"

[dependencies]
resvg = { version = "0", features = [ "text", "raqote-backend" ] }
chrono = "0"
png = "0"
weathergov = { version = "0", git = "https://github.com/sameer/weathergov.git" }
ssh2 = "0"
rtnetlink = "0"
clap = "2"
log = "0"
env_logger = "0"
ipnetwork = "0"

[profile.release]
opt-level = 'z'  # Optimize for size.
