[package]
name = "eink-clock"
version = "0.1.0"
authors = ["Sameer Puri <purisame@spuri.io>"]
edition = "2018"
description = "A clock for e-ink displays like that in the Kindle DX Graphite"

[dependencies]
cairo-rs = { version = "0", features = [ "png" ], default-features = false }
chrono = "0"
ssh2 = { version = "0", features = [ "vendored-openssl" ] }
clap = "2"
log = "0"
env_logger = "0"
reqwest = { version = "0.11", default-features = false, features = [ "rustls-tls" ] }
metar = "0"
uom = "0"
png = "0"
rtnetlink = "0"
netlink-packet-route = "0"
rusb = "0"
ipnetwork = "0"
futures = { version = "0.3", features = [ "std" ], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[profile.release]
opt-level = 'z'  # Optimize for size.
